  |health-usage|

STARTUP

• todo

TERMINAL

• |nvim_open_term()| can be called with a non-empty buffer. The buffer
  contents are piped to the PTY and displayed as terminal output.

TREESITTER

• |:EditQuery| command gained tab-completion, works with injected languages.

TUI

• |TermResponse| now supports DA1 and APC query responses.

UI

• |:restart| restarts Nvim and reattaches the current UI.
• |:checkhealth| shows a summary in the header for every healthcheck.
• |ui-multigrid| provides composition information and absolute coordinates.
• `vim._extui` provides an experimental commandline and message UI intended to
  replace the message grid in the TUI.
• Error messages are more concise:
  • "Error detected while processing:" changed to "Error in:".
  • "Error executing Lua:" changed to "Lua:".
• 'busy' status is shown in default statusline with symbol ◐

VIMSCRIPT

• |chdir()| allows optionally specifying a scope argument.
• |cmdcomplete_info()| gets current cmdline completion info.
• |getcompletiontype()| gets command-line completion type for any string.
• |prompt_getinput()| gets current user-input in prompt-buffer.
• |wildtrigger()| triggers command-line expansion.

==============================================================================
CHANGED FEATURES                                                 *news-changed*

These existing features changed their behavior.

• |gv| works in operator pending mode and does not abort.
• 'smartcase' applies to completion filtering.
• 'spellfile' location defaults to `stdpath("data").."/site/spell/"` instead of
  the first writable directory in 'runtimepath'.
• |vim.version.range()| doesn't exclude `to` if it is equal to `from`.
• |$VIM| and |$VIMRUNTIME| no longer check for Vim version-specific runtime
  directory `vim{number}` (e.g. `vim82`).
• 'scrollback' maximum value increased from 100000 to 1000000
• |matchfuzzy()| and |matchfuzzypos()| use an improved fuzzy matching algorithm
  (same as fzy).
